--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Releases Nexus Repository</name>
+	      <name>Landmark Technologies Release Nexus Repository</name>
 	      <url>http://35.183.181.135:8081/repository/mwa_release/</url>
 	    </repository>
 	    
